--- a/static/style.css
+++ b/static/style.css
@@ -6,12 +6,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 body {
-    background-color: #F5D4B7;
+    background-color: #FFF1E2;
     margin: 0;
 }
 .login, .register {
     width: 400px;
-    background-color: #FFF1E2;
+    background-color: #F5D4B7;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
     margin: 100px auto;
 }
@@ -77,9 +77,9 @@ body {
     background-color: #2868c7;
     transition: background-color 0.2s;
 }
-/* someone might thin we stole it....so, some changes are needed :)
+/* someone might think we stole it....so, some changes are needed :)*/
 .navtop {
-    background-color: #2f3947;
+    background-color: #F5D4B7;
     height: 60px;
     width: 100%;
     border: 0;
@@ -87,7 +87,7 @@ body {
 .navtop div {
     display: flex;
     margin: 0 auto;
-    width: 1000px;
+    width: 100%;
     height: 100%;
 }
 .navtop div h1, .navtop div a {
@@ -99,13 +99,13 @@ body {
     font-size: 24px;
     padding: 0;
     margin: 0;
-    color: #eaebed;
-    font-weight: normal;
+    color: #000000;
+    font-weight: bold;
 }
 .navtop div a {
     padding: 0 20px;
     text-decoration: none;
-    color: #c1c4c8;
+    color: #A3080C;
     font-weight: bold;
 }
 .navtop div a i {
@@ -115,35 +115,27 @@ body {
     color: #eaebed;
 }
 body.loggedin {
-    background-color: #f3f4f7;
+    background-color: #FFF1E2;
 }
-.content {
-    width: 1000px;
-    margin: 0 auto;
+
+.sidebar{
+    overflow-x: hidden;
+    background-color: #F5D4B7;
+    border-style: solid;
+    border-color: #A3080C;
+    float: left;
 }
-.content h2 {
-    margin: 0;
-    padding: 25px 0;
-    font-size: 22px;
-    border-bottom: 1px solid #e0e0e3;
-    color: #4a536e;
-}
-.content > p, .content > div {
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-    margin: 25px 0;
-    padding: 25px;
-    background-color: #fff;
-}
-.content > p table td, .content > div table td {
-    padding: 5px;
-}
-.content > p table td:first-child, .content > div table td:first-child {
+.sidebar a, h2{
+    padding: 0 20px;
+    text-decoration: none;
+    color: #A3080C;
     font-weight: bold;
-    color: #4a536e;
-    padding-right: 15px;
+    display: block;
 }
-.content > div p {
-    padding: 5px;
-    margin: 0 0 10px 0;
+.sidebar h2{
+    color: #000000;
 }
-*/
+
+.sidebar a:hover {
+    color: #eaebed;
+}
