--- a/templates/home_student.html
+++ b/templates/home_student.html
@@ -25,8 +25,8 @@
                 <a href="#" onclick="sidebar_open_close()"><i class="fas fa-bars"></i></a>
                 <h1>Online testing</h1>
                 <a href="{{ url_for('home') }}"><i class="fas fa-home"></i>Home</a>
-                <a href="{{ url_for('home') }}"><i class="fas fa-user-circle"></i>Profile</a>
-                <a href="{{ url_for('home') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                <a href="{{ url_for('home') }}"><i class="fas fa-cog"></i>Settings</a>
+                <a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
             </div>
         </nav>
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque ipsum. Vestibulum fermentum tortor id mi. Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus, nec bibendum odio risus sit amet ante. Donec iaculis gravida nulla. Praesent vitae arcu tempor neque lacinia pretium. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. In convallis. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Duis condimentum augue id magna semper rutrum. Etiam posuere lacus quis dolor. Praesent vitae arcu tempor neque lacinia pretium. Aenean id metus id velit ullamcorper pulvinar. Morbi scelerisque luctus velit. Aliquam ante.
