added full menu in sidear and user info on homepage, database still not tested

--- a/static/style.css
+++ b/static/style.css
@@ -144,3 +144,12 @@ body.loggedin {
 .sidebar a:hover {
     color: #eaebed;
 }
+
+.profile_table{
+    width: 600px;
+    padding: 1cm;
+    margin: 1cm;
+    border-style: solid;
+    border-color: #A3080C;
+
+}
