--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Online testing</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body class="loggedin">
        <!--Sidebar menu-->
@@ -12,7 +13,7 @@
             {%  block sidebar  %}
                 {% if profile.status == "admin" %}
                     <h2>Admin</h2>
-                    <a href="#" class="sidebar_button">Add user</a>
+                    <a href="{{ url_for('add_user') }}" class="sidebar_button">Add user</a>
                     <a href="#" class="sidebar_button">Manage users</a>
                 {% endif %} 
                 {% if profile.status == "admin" or profile.status == "professor" %}
@@ -40,10 +41,19 @@
                 <a href="#" onclick="sidebar_open_close()"><i class="fas fa-bars"></i></a>
                 <h1>Online testing</h1>
                 <a href="{{ url_for('home') }}"><i class="fas fa-home"></i>Home</a>
-                <a href="{{ url_for('home') }}"><i class="fas fa-cog"></i>Settings</a>
+                <a href="{{ url_for('settings') }}"><i class="fas fa-cog"></i>Settings</a>
                 <a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
             </div>
         </nav>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="aler alert-{{category}}">
+                            {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         {%  block content  %}
     
 
