--- a/templates/home_student.html
+++ b/templates/home_student.html
@@ -1,63 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Online testing</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    </head>
-    <body class="loggedin">
-       <!--Sidebar menu-->
-        <div class="sidebar" style="display:none" id="mySidebar">
-            <a href="#" class="w3-bar-item w3-button">Register new test</a>
-            <br>
-            <h2>My tests</h2>
-            <a href="#" class="w3-bar-item w3-button">Link 1</a>
-            <a href="#" class="w3-bar-item w3-button">Link 2</a>
-            <a href="#" class="w3-bar-item w3-button">Link 3</a>
-            <br>
-        </div>
-        <div  id="main">
+{%extends "generic.html"%}
 
-        <!--Rest of the page-->
-        <nav class="navtop">
-            <div>
-                <a href="#" onclick="sidebar_open_close()"><i class="fas fa-bars"></i></a>
-                <h1>Online testing</h1>
-                <a href="{{ url_for('home') }}"><i class="fas fa-home"></i>Home</a>
-                <a href="{{ url_for('home') }}"><i class="fas fa-cog"></i>Settings</a>
-                <a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
-            </div>
-        </nav>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque ipsum. Vestibulum fermentum tortor id mi. Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus, nec bibendum odio risus sit amet ante. Donec iaculis gravida nulla. Praesent vitae arcu tempor neque lacinia pretium. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. In convallis. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Duis condimentum augue id magna semper rutrum. Etiam posuere lacus quis dolor. Praesent vitae arcu tempor neque lacinia pretium. Aenean id metus id velit ullamcorper pulvinar. Morbi scelerisque luctus velit. Aliquam ante.
+{%block sidebar%}
+<a href="{{url_for('create_test')}}">Create test</a>
+{%endblock%}
 
-Nulla pulvinar eleifend sem. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio, vitae placerat pede sem sit amet enim. Aliquam in lorem sit amet leo accumsan lacinia. Nullam eget nisl. Integer vulputate sem a nibh rutrum consequat. Nam sed tellus id magna elementum tincidunt. Nullam at arcu a est sollicitudin euismod. Aenean placerat. Phasellus rhoncus. Nam quis nulla. Nulla est. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Curabitur bibendum justo non orci.
-
-Fusce tellus odio, dapibus id fermentum quis, suscipit id erat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras elementum. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Duis pulvinar. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Duis risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Vivamus luctus egestas leo. Maecenas sollicitudin. Cras elementum.
-
-Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien. Sed convallis magna eu sem. Integer tempor. Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus. Suspendisse nisl. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Proin in tellus sit amet nibh dignissim sagittis. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. In sem justo, commodo ut, suscipit at, pharetra vitae, orci.
-
-Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Donec iaculis gravida nulla. Sed ac dolor sit amet purus malesuada congue. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Et harum quidem rerum facilis est et expedita distinctio. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Duis condimentum augue id magna semper rutrum. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Vivamus ac leo pretium faucibus. Mauris metus. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam. Aliquam erat volutpat. Aenean vel massa quis mauris vehicula lacinia. Maecenas libero. Aliquam ornare wisi eu metus. In convallis. Maecenas aliquet accumsan leo. Donec vitae arcu. Integer imperdiet lectus quis justo.
-       
-        </div>
-        <script>
-            var state = false;
-            function sidebar_open_close() {
-              if (state == false){
-              state = true;
-              document.getElementById("main").style.marginLeft = "20%";
-              document.getElementById("mySidebar").style.width = "20%";
-              document.getElementById("mySidebar").style.display = "inline-block";
-              } else{
-                  sidebar_close();
-              }
-            }
-            function sidebar_close() {
-              state = false;
-              document.getElementById("main").style.marginLeft = "0%";
-              document.getElementById("mySidebar").style.width = "0%";
-              document.getElementById("mySidebar").style.display = "none";
-            }
-        </script>
-    </body>
-</html>
+{%block body%}
+Student homepage
+{%endblock%}
