--- a/templates/create_test.html
+++ b/templates/create_test.html
@@ -1,8 +1,11 @@
-{% extends "home_student.html" %}
+{% extends "layout.html" %}
 
-{% block body %}
-<h1>Create Test</h1>
+{% block content %}
 <div id="preview">
-    <h2>preview</h2>
+    <h1>preview</h1>
+</div>
+<div id="buttons">
+</div>
+
 </div>
 {% endblock %}
