--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
                 {% endif %} 
                 {% if profile.status == "admin" or profile.status == "professor" %}
                     <h2>Professor</h2>
-                    <a href="#" class="sidebar_button">Create test</a>
+                    <a href="{{ url_for('create_test') }}" class="sidebar_button">Create test</a>
                     <a href="#" class="sidebar_button">Test created by me</a>
                     <a href="#" class="sidebar_button">Authorize assitent</a>
                 {% endif %}
