--- a/templates/login.html
+++ b/templates/login.html
@@ -15,11 +15,11 @@
             </div>
             <form action="{{ url_for('login') }}" method="post">
                 <!-- https://stackoverflow.com/questions/12894169/what-is-the-html-for-attribute-in-label explains for attribute-->
-                <label for="username">
+                <label for="email">
                     <!--https://fontawesome.com/icons/user - explains line underneath-->
                     <i class="fas fa-user"></i>
                 </label>
-                <input type="text" name="username" placeholder="Username" id="username" required>
+                <input type="text" name="email" placeholder="Email" id="email" required>
                 <label for="password">
                     <i class="fas fa-lock"></i>
                 </label>
