--- a/templates/create_full.html
+++ b/templates/create_full.html
@@ -14,7 +14,7 @@
                         {{ form.question(class="form-control form-control-lg") }}
                     {% endif %}
                     <!--Test Value-->
-                    <h3 color="black">{{ form.value.label }} </h3> [dd/mm/yy]
+                    <h3 color="black">{{ form.value.label }} </h3>
                     {% if form.value.errors %}
                         {{ form.value(class="form-control form-control-lg form-control-lg is-invalid") }}
                     {% else %}
