--- a/static/style.css
+++ b/static/style.css
@@ -153,10 +153,18 @@ body.loggedin {
 }
 
 .profile_table{
-    width: 600px;
+    width:90%;
     padding: 1cm;
     margin: 1cm;
     border-style: solid;
     border-color: #A3080C;
 
+}
+
+.password_cell{
+    display:none;
+}
+
+.show_password:hover + .password_cell{
+    display: inline-block;
 }
