--- a/static/style.css
+++ b/static/style.css
@@ -153,10 +153,17 @@ body.loggedin {
 }
 
 .profile_table{
-    width: 600px;
+    width: 90%;
     padding: 1cm;
     margin: 1cm;
     border-style: solid;
     border-color: #A3080C;
+}
 
+.question{
+    width: 80%;
+    padding: 1cm;
+    margin: 1cm;
+    border-style: solid;
+    border-color: #A3080C;
 }
