--- a/static/style.css
+++ b/static/style.css
@@ -164,6 +164,7 @@ body.loggedin {
     width: 80%;
     padding: 1cm;
     margin: 1cm;
+    vertical-align: center;
     border-style: solid;
     border-color: #A3080C;
 }
