--- a/templates/change_user.html
+++ b/templates/change_user.html
@@ -2,7 +2,107 @@
 {%  block content  %}
 
 <div class="profile_table">
-    <h1>PRDEL</h1>
+    <form method="POST" action="">
+        <div class="profile_table">
+            <div class="form-group">
+                <h3 color="black">Name</h3>
+                {% if form.name.errors %}
+                    {{ form.name(class="form-control form-control-lg form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.name.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.name(class="form-control form-control-lg")  }}
+                {% endif %}
+                    
+                
+            </div>
+            <div class="form-group">
+                <h3 color="black">Surname</h3>
+                {% if form.surname.errors %}
+                    {{ form.surname(class="form-control form-control-lg form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {% for error in form.surname.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.surname(class="form-control form-control-lg")  }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <h3 color="black">Email</h3>
+                {% if form.email.errors %}
+                {{ form.email(class="form-control form-control-lg form-control-lg is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.email.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.email(class="form-control form-control-lg")  }}
+                {% endif %}                
+            </div>
+            <div class="form-group">
+                <h3 color="black">Confirm Email</h3>
+                {% if form.email.errors %}
+                {{ form.email(class="form-control form-control-lg form-control-lg is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.email.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.email(class="form-control form-control-lg")  }}
+                {% endif %}                
+            </div>
+            <div class="form-group">
+                <h3 color="black">Password</h3>
+                {% if form.password.errors %}
+                    {{ form.password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.password(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <h3 color="black">Confirm password</h3>
+                {% if form.confirm_password.errors %}
+                    {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.confirm_password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.confirm_password(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <h3 color="black">Status</h3>
+                {% if form.status.errors %}
+                {{ form.status(class="form-control form-control-lg form-control-lg is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.status.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.status(class="form-control form-control-lg")  }}
+                {% endif %}                
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-danger")  }}
+                
+            </div>
+        </form>
+    </div>
     
 </div>
 {% endblock  %}
