--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
                     <h2>Assistant</h2>
                     <a href="#" class="sidebar_button">Apply for test</a>
                     <a href="#" class="sidebar_button">Score tests</a>
+                    <a href="#" class="sidebar_button">Approve student</a>
                 {% endif %}
             {%  endblock sidebar  %}
             <h2>Student</h2>
