--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,18 +20,18 @@
                     <h2>Professor</h2>
                     <a href="{{ url_for('create_test') }}" class="sidebar_button">Create test</a>
                     <a href="{{ url_for('my_tests') }}" class="sidebar_button">Test created by me</a>
-                    <a href="#" class="sidebar_button">Authorize assitent</a>
+                    <a href="{{ url_for('approve_assistant') }}" class="sidebar_button">Authorize assitant</a>
                 {% endif %}
                 {% if profile.status == "admin" or profile.status == "professor" or profile.status == "assistant" %}
                     <h2>Assistant</h2>
-                    <a href="#" class="sidebar_button">Apply for test</a>
+                    <a href="{{ url_for('assistant_apply') }}" class="sidebar_button">Apply for test</a>
                     <a href="#" class="sidebar_button">Score tests</a>
                     <a href="#" class="sidebar_button">Approve student</a>
                 {% endif %}
             {%  endblock sidebar  %}
             <h2>Student</h2>
-            <a href="#" class="sidebar_button">Register test</a>
-            <a href="#" class="sidebar_button">Registered tests</a>
+            <a href="{{ url_for('student_register') }}" class="sidebar_button">Register test</a>
+            <a href="#" class="sidebar_button">Active tests</a>
             <a href="#" class="sidebar_button">Submitted tests</a>
         </div>
         <div  id="main">
