--- a/templates/my_tests.html
+++ b/templates/my_tests.html
@@ -20,6 +20,7 @@
             <table>
                 <td><button name="edit" value={{ test['config']['id'] }} type="submit" class="btn btn-danger">Edit</button></td>
                 <td><button name="remove" value={{ test['config']['id'] }} type="submit" class="btn btn-danger">Remove</button></td>
+                <td><button name="activate" value={{ test['config']['id'] }} type="submit" class="btn btn-danger">Activate</button></td>
             </table>
             </form>
 
