--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
             {%  endblock sidebar  %}
             <h2>Student</h2>
             <a href="{{ url_for('student_register') }}" class="sidebar_button">Register test</a>
-            <a href="#" class="sidebar_button">Active tests</a>
+            <a href="{{ url_for('active_tests') }}" class="sidebar_button">Active tests</a>
             <a href="#" class="sidebar_button">Submitted tests</a>
         </div>
         <div  id="main">
