--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
                 D: {{question['d']}}
             {% endif %}
             <form method="POST" action="">
-                <button name="answer" value={{ question['id'] }} type="submit" class="btn btn-danger">Answer</button>
+                <button name="answer_q" value={{ question['id'] }} type="submit" class="btn btn-danger">Answer</button>
                 </form>
         </div>
     {% endfor %}
